--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #72b15a;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box-counter {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 300px;
+  width: 100%;
+  padding: 40px 20px;
+  border: 5px solid #ffffff;
+  border-radius: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.btn-inner {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.number {
+  align-self: center;
+  width: 50%;
+  border: 3px solid #ffffff;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 5rem;
+  color: rgb(250, 250, 250);
+}
+.number-max {
+  color: rgb(255, 102, 0);
+}
+.btn {
+  padding: 10px;
+  border: 2px solid #fff;
+  outline: none;
+  border-radius: 20px;
+	font-size: 20px;
+	cursor: pointer;
 }
