refact: change code styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+@import-normalize;
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+:root {
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-black: hsl(0, 0%, 0%);
+	--clr-olive-light: hsl(103, 36%, 52%);
+	--clr-orange: hsl(25, 100%, 50%);
+
+  --clr-default: hsl(210, 100%, 40%);
+  --clr-primary: hsl(348, 82%, 44%);
+  --clr-secondary: hsl(208, 100%, 97%);
+
+  --clr-default-hover: hsl(210, 100%, 50%);
+  --clr-primary-hover: hsl(348, 100%, 55%);
+  --clr-secondary-hover: hsl(209, 65%, 92%);
+
+	--clr-default-active: hsl(210, 100%, 35%);
+  --clr-primary-active: hsl(348, 80%, 39%);
+  --clr-secondary-active: hsl(209, 100%, 89%);
+
+	--clr-default-disabled: hsl(0, 0%, 80%);
+  --clr-primary-disabled: hsl(210, 100%, 80%);
+  --clr-secondary-disabled: hsl(345, 70%, 70%);
+
+	--shadow-active: 0 0 2px 1px;
+  --transition-200ms: all 200ms ease-in;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+	padding: 0;
+	font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
