--- a/src/App.css
+++ b/src/App.css
@@ -3,40 +3,15 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #72b15a;
+  background-color: var(--clr-olive-light);
 }
+
 .box-counter {
   display: flex;
   flex-direction: column;
   max-width: 300px;
   width: 100%;
   padding: 40px 20px;
-  border: 5px solid #ffffff;
+  border: 5px solid var(--clr-white);
   border-radius: 10px;
-}
-.btn-inner {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
-}
-.number {
-  align-self: center;
-  width: 50%;
-  border: 3px solid #ffffff;
-  border-radius: 10px;
-  text-align: center;
-  font-size: 5rem;
-  color: rgb(250, 250, 250);
-}
-.number-max {
-  color: rgb(255, 102, 0);
-}
-.btn {
-  width: 100px;
-  padding: 10px;
-  border: 2px solid #fff;
-  outline: none;
-  border-radius: 20px;
-  font-size: 20px;
-  cursor: pointer;
 }
