--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,38 @@
 .wrapper {
   display: flex;
-  justify-content: center;
+  flex-flow: row wrap;
   align-items: center;
+  align-content: center;
+  justify-content: center;
+  gap: 50px;
   height: 100vh;
   background-color: var(--clr-olive-light);
 }
 
-.box-counter {
+.box {
   display: flex;
   flex-direction: column;
-  max-width: 300px;
+  gap: 20px;
+  max-width: 350px;
   width: 100%;
-  padding: 40px 20px;
+  padding: 20px;
   border: 5px solid var(--clr-white);
   border-radius: 10px;
+}
+
+.btn-inner {
+  display: flex;
+	flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px;
+  border: 3px solid var(--clr-white);
+  border-radius: 10px;
+}
+
+.btn {
+  border: 2px solid var(--clr-white);
+  border-radius: 20px;
+  letter-spacing: 0.2px;
+  word-spacing: 1px;
 }
