--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,25 @@
 *,
 *::after,
 *::before {
+	margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 :root {
   --clr-white: hsl(0, 0%, 100%);
   --clr-black: hsl(0, 0%, 0%);
-	--clr-olive-light: hsl(103, 36%, 52%);
+  --clr-olive-light: hsl(103, 36%, 70%);
+  --clr-steel-blue: hsl(211, 49%, 63%);
+
+	--clr-grey: hsl(0, 0%, 50%);
+	--clr-grey-dim: hsl(0, 0%, 30%);
+
+	--clr-warning: hsl(5, 70%, 60%);
+	--clr-success: hsl(120, 80%, 40%);
+
 	--clr-orange: hsl(25, 100%, 50%);
+	--clr-orange-pale: hsl(24, 49%, 63%);
 
   --clr-default: hsl(210, 100%, 40%);
   --clr-primary: hsl(348, 82%, 44%);
@@ -20,22 +31,24 @@
   --clr-primary-hover: hsl(348, 100%, 55%);
   --clr-secondary-hover: hsl(209, 65%, 92%);
 
-	--clr-default-active: hsl(210, 100%, 35%);
+  --clr-default-active: hsl(210, 100%, 35%);
   --clr-primary-active: hsl(348, 80%, 39%);
   --clr-secondary-active: hsl(209, 100%, 89%);
 
-	--clr-default-disabled: hsl(0, 0%, 80%);
+  --clr-default-disabled: hsl(0, 0%, 80%);
   --clr-primary-disabled: hsl(210, 100%, 80%);
   --clr-secondary-disabled: hsl(345, 70%, 70%);
 
-	--shadow-active: 0 0 2px 1px;
+  --shadow-active: 0 0 2px 1px;
   --transition-200ms: all 200ms ease-in;
+  --shadow-focus-input: 0 0 7px;
+  --box-shadow: 1px 1px 10px;
 }
 
 body {
   margin: 0;
-	padding: 0;
-	font-size: 16px;
+  padding: 0;
+  font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
