--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .wrapper {
   display: flex;
   flex-flow: row wrap;
-  align-items: center;
+  align-items: stretch;
   align-content: center;
   justify-content: center;
   gap: 50px;
+	padding: 15px;
   height: 100vh;
   background-color: var(--clr-olive-light);
 }
