--- a/src/components/setting/display/Display.module.css
+++ b/src/components/setting/display/Display.module.css
@@ -1,8 +1,17 @@
 .inner {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	flex: 1 0 fit-content;
   width: 100%;
 	padding: 10px 0;
 	font-weight: 600;
   color: var(--clr-grey-dim);
 	border: 3px solid var(--clr-white);
   border-radius: 10px;
+}
+
+.input {
+	flex: 1 1 100%;
+	min-width: 100px;
 }
